<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_about_my_panchayath"
            android:title="@string/about_panchayath" />
        <item
            android:id="@+id/nav_track_complaints"
            android:title="@string/track_complaints" />
        <item
            android:id="@+id/nav_complaints"
            android:title="@string/complaints" />
        <item
            android:id="@+id/nav_view_profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_about_app"
            android:title="@string/about_app" />
        <item
            android:id="@+id/nav_logout"
            android:title="@string/logout" />
    </group>
</menu>